ros_workspace/log/build_2020-12-02_06-10-33/ralph_py/stderr.log
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 77
    if(self.first) {
                   ^
SyntaxError: invalid syntax

